--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <script src="libs/xaringanExtra-search/search.js"></script>
     <script>window.addEventListener('load', function() { window.xeSearch = new RemarkSearch({"position":"bottom-left","caseSensitive":false,"showIcon":true,"autoSearch":true}) })</script>
     <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x56245dc21a848d6be9fdfdf9f7e7eba","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"c6913e05edde47c49cf26d15292f3ea7","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -194,7 +194,7 @@ ipa_pt("tipos", narrow = T)
 ipa_pt("quiséssemos", narrow = T)
 #&gt; [1] "ki.ˈzɛ.se.mʊs"
 ipa_pt("parangaricutirrimirruaro", narrow = T)
-#&gt; [1] "ˌpa.ɾãŋ.ˌga.ɾi.ˌku.t͡ʃi.ˌxi.mi.ˈxu.a.ɾʊ"
+#&gt; [1] "pa.ˌɾãŋ.ga.ˌɾi.ku.ˌt͡ʃi.xi.ˌmi.xu.ˈa.ɾʊ"
 ```
 
 - **Not vectorized** (i.e., serial): ideal for *one* input
@@ -826,7 +826,7 @@ This project has benefitted from the ENVOL program (Université Laval). More inf
 "highlight": "haddock",
 "ratio": "16:9",
 "center": true,
-"slideNumberFormat": "%current% de %total%",
+"slideNumberFormat": "%current% of %total%",
 "highlightLines": true,
 "countIncrementalSlides": false
 });
