--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <script src="libs/xaringanExtra-search/search.js"></script>
     <script>window.addEventListener('load', function() { window.xeSearch = new RemarkSearch({"position":"bottom-left","caseSensitive":false,"showIcon":true,"autoSearch":true}) })</script>
     <script src="libs/xaringanExtra-progressBar/progress-bar.js"></script>
-    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x7bb6bb44cbb48e4bbea352467650eee","expires":14}</script>
+    <script type="application/json" id="xaringanExtra-editable-docid">{"id":"x6ace7366d0a4849ae3dc3e6ec19b12f","expires":14}</script>
     <script src="libs/himalaya/himalaya.js"></script>
     <script src="libs/js-cookie/js.cookie.js"></script>
     <link href="libs/editable/editable.css" rel="stylesheet" />
@@ -72,7 +72,7 @@ class: inverse, center, middle
 
 ## What is it? 🤔
 
-&lt;img src="fonology.png" alt="Fonology" style="width:15%; float: right"&gt;
+&lt;img src="fonology.png" alt="Fonology" style="wtexidth:15%; float: right"&gt;
 - An R package to help phonologists automate certain tasks
 - Currently under development; frequent updates
 
@@ -483,7 +483,7 @@ syllables |&gt;
 ## Example 9: vowel trapezoids
 
 - `plotVowels()` generates trapezoids for some languages
-- It also exports the `tex` file for those who use `\(\LaTeX\)`
+- It also exports the &lt;mark&gt;`tex`&lt;/mark&gt; file for those who use `\(\LaTeX\)`
 
 .pull-left[
 
